Reorganized tags for Swagger docs. User, My Profile, and Login sections functional
